--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,76 @@
-body {
+*,
+*::after,
+*::before {
   margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  html {
+    font-size: 50%;
+  }
+}
+@media only screen and (min-width: 112.5em) {
+  html {
+    font-size: 75%;
+  }
+}
+
+body {
+  box-sizing: border-box;
+  padding: 3rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@media only screen and (max-width: 56.25em) {
+  body {
+    padding: 0;
+  }
+}
+body ::selection {
+  background-color: #3498db;
+  color: #fff;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Global colors */
+:root {
+  /* Blue */
+  --clr-peterriver: #3498db;
+  --clr-belizehole: #2980b9;
+
+  /* Green */
+  --clr-emerald: #2ecc71;
+  --clr-nephritis: #27ae60;
+  --clr-lightgreen: #cff5df;
+
+  --clr-turquoise: #1abc9c;
+  --clr-greensea: #16a085;
+
+  /* Red */
+  --clr-alizarin: #e74c3c;
+  --clr-pomegranate: #c0392b;
+
+  /* Orange */
+  --clr-sunflower: #f1c40f;
+  --clr-orange: #f39c12;
+  --clr-carrot: #e67e22;
+
+  /* Grey */
+  --clr-clouds: #ecf0f1;
+  --clr-silver: #bdc3c7;
+  --clr-concrete: #95a5a6;
+  --clr-asbestos: #7f8c8d;
+  --clr-wetasphalt: #34495e;
 }
